Horizontal Scroll Fix 1

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -547,6 +547,7 @@ pre code {
 
 .container {
   width: 100%;
+  max-width: 100vw;
   padding-right: 15px;
   padding-left: 15px;
   margin-right: auto;
